# debounce-test

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: Test.hpp  main.cpp  main.h  test-evenodd.c  test-flipwait.c  test-fun.c  test-pingpong.c  test-stateshift.c
src/algorithms/: bitshift.hpp  counter.hpp  delay.hpp  integrator.hpp  pingpong.hpp  stateshift.hpp  ultimate.hpp
